--- a/paimon-e2e-tests/pom.xml
+++ b/paimon-e2e-tests/pom.xml
@@ -239,7 +239,7 @@ under the License.
                         <artifactItem>
                             <groupId>org.apache.flink</groupId>
                             <artifactId>${flink.sql.connector.hive}</artifactId>
-                            <version>${test.flink.version}</version>
+                            <version>${test.flink.connector.hive.version}</version>
                             <destFileName>flink-sql-connector-hive.jar</destFileName>
                             <type>jar</type>
                             <overWrite>true</overWrite>
@@ -301,6 +301,7 @@ under the License.
                 <test.flink.version>1.19.1</test.flink.version>
                 <test.flink.connector.kafka.version>3.2.0-${test.flink.main.version}</test.flink.connector.kafka.version>
                 <flink.sql.connector.hive>flink-sql-connector-hive-2.3.9_${scala.binary.version}</flink.sql.connector.hive>
+                <test.flink.connector.hive.version>${test.flink.version}</test.flink.connector.hive.version>
             </properties>
         </profile>
 
@@ -311,6 +312,7 @@ under the License.
                 <test.flink.version>1.18.1</test.flink.version>
                 <test.flink.connector.kafka.version>3.0.1-${test.flink.main.version}</test.flink.connector.kafka.version>
                 <flink.sql.connector.hive>flink-sql-connector-hive-2.3.9_${scala.binary.version}</flink.sql.connector.hive>
+                <test.flink.connector.hive.version>${test.flink.version}</test.flink.connector.hive.version>
             </properties>
         </profile>
 
@@ -321,6 +323,7 @@ under the License.
                 <test.flink.version>1.17.2</test.flink.version>
                 <test.flink.connector.kafka.version>${test.flink.version}</test.flink.connector.kafka.version>
                 <flink.sql.connector.hive>flink-sql-connector-hive-2.3.9_${scala.binary.version}</flink.sql.connector.hive>
+                <test.flink.connector.hive.version>${test.flink.version}</test.flink.connector.hive.version>
             </properties>
         </profile>
 
@@ -331,6 +334,7 @@ under the License.
                 <test.flink.version>1.16.3</test.flink.version>
                 <test.flink.connector.kafka.version>${test.flink.version}</test.flink.connector.kafka.version>
                 <flink.sql.connector.hive>flink-sql-connector-hive-2.3.9_${scala.binary.version}</flink.sql.connector.hive>
+                <test.flink.connector.hive.version>${test.flink.version}</test.flink.connector.hive.version>
             </properties>
         </profile>
 
@@ -341,6 +345,7 @@ under the License.
                 <test.flink.version>1.15.3</test.flink.version>
                 <test.flink.connector.kafka.version>${test.flink.version}</test.flink.connector.kafka.version>
                 <flink.sql.connector.hive>flink-sql-connector-hive-2.3.6_${scala.binary.version}</flink.sql.connector.hive>
+                <test.flink.connector.hive.version>${test.flink.version}</test.flink.connector.hive.version>
             </properties>
         </profile>
 
