[Feature] Add filesystem support for Microsoft Huawei OBS Storage

--- a/paimon-filesystems/pom.xml
+++ b/paimon-filesystems/pom.xml
@@ -44,6 +44,8 @@
         <module>paimon-gs-impl</module>
         <module>paimon-azure</module>
         <module>paimon-azure-impl</module>
+        <module>paimon-obs</module>
+        <module>paimon-obs-impl</module>
     </modules>
 
     <properties>
