--- a/paimon-filesystems/paimon-cosn-impl/pom.xml
+++ b/paimon-filesystems/paimon-cosn-impl/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <artifactId>paimon-filesystems</artifactId>
         <groupId>org.apache.paimon</groupId>
-        <version>1.1-SNAPSHOT</version>
+        <version>1.1.0</version>
     </parent>
 
     <artifactId>paimon-cosn-impl</artifactId>
