--- a/paimon-flink/paimon-flink-1.20/pom.xml
+++ b/paimon-flink/paimon-flink-1.20/pom.xml
@@ -46,6 +46,12 @@ under the License.
 
         <dependency>
             <groupId>org.apache.paimon</groupId>
+            <artifactId>paimon-flink1-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.paimon</groupId>
             <artifactId>paimon-flink-cdc</artifactId>
             <version>${project.version}</version>
             <exclusions>
@@ -87,6 +93,7 @@ under the License.
                             <artifactSet>
                                 <includes combine.children="append">
                                     <include>org.apache.paimon:paimon-flink-common</include>
+                                    <include>org.apache.paimon:paimon-flink1-common</include>
                                     <include>org.apache.paimon:paimon-flink-cdc</include>
                                 </includes>
                             </artifactSet>
