--- a/paimon-format/pom.xml
+++ b/paimon-format/pom.xml
@@ -36,6 +36,7 @@ under the License.
         <commons.pool.version>1.6</commons.pool.version>
         <commons.lang3.version>3.12.0</commons.lang3.version>
         <storage-api.version>2.8.1</storage-api.version>
+        <commons.io.version>2.16.1</commons.io.version>
     </properties>
 
     <dependencies>
@@ -166,6 +167,12 @@ under the License.
                 Users with those Avro records need to add this dependency themselves. -->
             <optional>true</optional>
             <version>${joda-time.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons.io.version}</version>
         </dependency>
 
         <!-- Avro End -->
@@ -333,6 +340,7 @@ under the License.
                                     <include>com.fasterxml.jackson.core:jackson-databind</include>
                                     <include>com.fasterxml.jackson.core:jackson-annotations</include>
                                     <include>org.apache.commons:commons-compress</include>
+                                    <include>commons-io:commons-io</include>
 
                                     <!-- Parquet -->
                                     <include>org.apache.parquet:parquet-hadoop</include>
