--- a/paimon-flink/paimon-flink-1.17/pom.xml
+++ b/paimon-flink/paimon-flink-1.17/pom.xml
@@ -36,6 +36,7 @@ under the License.
     <properties>
         <flink.version>1.17.2</flink.version>
         <iceberg.flink.version>1.17</iceberg.flink.version>
+        <frocksdbjni.version>6.20.3-ververica-2.0</frocksdbjni.version>
     </properties>
 
     <dependencies>
@@ -112,6 +113,13 @@ under the License.
             <groupId>org.apache.iceberg</groupId>
             <artifactId>iceberg-flink-${iceberg.flink.version}</artifactId>
             <version>${iceberg.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.ververica</groupId>
+            <artifactId>frocksdbjni</artifactId>
+            <version>${frocksdbjni.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
