--- a/paimon-filesystems/paimon-obs-impl/pom.xml
+++ b/paimon-filesystems/paimon-obs-impl/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.paimon</groupId>
         <artifactId>paimon-filesystems</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <version>1.1.1</version>
     </parent>
 
     <artifactId>paimon-obs-impl</artifactId>
